Set Augury RAILS_ENV in task def

--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -91,6 +91,7 @@ Resources:
         SecretsStackName: !Ref SecretsStackName
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        EnvironmentTypeLowercase: !Ref EnvironmentTypeLowercase
         RegionMode: !Ref RegionMode
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
