--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -1,4 +1,5 @@
 # stacks/apps/augury.yml
+# 300A
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
 
@@ -26,6 +27,7 @@ Parameters:
   EcsClusterArn: { Type: String }
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
+  EnvironmentTypeLowercase: { Type: String }
   RegionMode: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
@@ -300,6 +302,8 @@ Resources:
               Value: !Ref AdFilesHostname
             - Name: RAILS_SERVE_STATIC_FILES
               Value: "true"
+            - Name: RAILS_ENV
+              Value: !Ref EnvironmentTypeLowercase
             - Name: POSTGRES_POOL_SIZE
               Value: !Ref kPostgresPoolSize
             - Name: CASTLE_POSTGRES_HOST
