Update Dovetail Router hostname

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -216,7 +216,7 @@ Resources:
       CmsHostname: !If [IsProduction, cms.prx.org, cms.staging.prx.tech]
       CorporateHostname: corporate.prx.tech
       DovetailCdnHostname: !If [IsProduction, dovetail3-cdn.prxu.org, dovetail3-cdn-staging.prxu.org]
-      DovetailRouterHostname: !If [IsProduction, dovetail-router.prxu.org, dovetail-router.staging.prxu.org]
+      DovetailRouterHostname: !If [IsProduction, dovetail.prxu.org, dovetail.staging.prxu.org]
       ExchangeHostname: !If [IsProduction, exchange.prx.org, exchange.staging.prx.tech]
       FeederHostname: !If [IsProduction, feeder.prx.org, feeder.staging.prx.tech]
       IdHostname: !If [IsProduction, id.prx.org, id.staging.prx.tech]
