Move some Feeder environment variables to task def

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -52,6 +52,7 @@ Parameters:
   LegacyCastleHostname: { Type: String }
   CmsHostname: { Type: String }
   CountHostname: { Type: String }
+  DovetailRouterHostname: { Type: String }
   ExchangeHostname: { Type: String }
   FeederHostname: { Type: String }
   IdHostname: { Type: String }
@@ -271,9 +272,11 @@ Resources:
         EcrImageTag: !Ref FeederEcrImageTag
         SecretsVersion: !Ref FeederSecretsVersion
         SecretsStackName: !Ref SecretsStackName
+        NewRelicApiKeyPrxLite: !Ref NewRelicApiKeyPrxLite
         AlbListenerRulePriorityPrefix: !Ref FeederSharedAlbListenerRulePriorityPrefix
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        EnvironmentTypeLowercase: !Ref EnvironmentTypeLowercase
         RegionMode: !Ref RegionMode
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
@@ -281,8 +284,13 @@ Resources:
         CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
         SharedAuroraPostgresqlEndpoint: !Ref SharedAuroraPostgresqlEndpoint
         SharedAuroraPostgresqlPort: !Ref SharedAuroraPostgresqlPort
+        PorterJobExecutionSnsTopicArn: !Ref PorterJobExecutionSnsTopicArn
         AnnounceResourcePrefix: !Ref AnnounceResourcePrefix
         FeedsS3BucketArn: !Ref FeedsS3BucketArn
+        CmsHostname: !Ref CmsHostname
+        DovetailRouterHostname: !Ref DovetailRouterHostname
+        IdHostname: !Ref IdHostname
+        BetaHostname: !Ref BetaHostname
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
