--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -627,6 +627,7 @@ Resources:
         LegacyCastleHostname: !GetAtt Constants.LegacyCastleHostname
         CmsHostname: !GetAtt Constants.CmsHostname
         CountHostname: !GetAtt Constants.CountHostname
+        DovetailRouterHostname: !GetAtt Constants.DovetailRouterHostname
         ExchangeHostname: !GetAtt Constants.ExchangeHostname
         FeederHostname: !GetAtt Constants.FeederHostname
         IdHostname: !GetAtt Constants.IdHostname
