Move env vars to CMS task def

--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -1,4 +1,5 @@
 # stacks/apps/cms.yml
+# 100A
 #
 # The names of the SQS queues created by this template are intended to
 # implicitly match some configuration that exists within the CMS application.
@@ -31,6 +32,7 @@ Parameters:
   EcsClusterArn: { Type: String }
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
+  EnvironmentTypeLowercase: { Type: String }
   RegionMode: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
@@ -51,6 +53,7 @@ Parameters:
   AnnounceResourcePrefix: { Type: String }
   PorterJobExecutionSnsTopicArn: { Type: String }
   FeedsS3BucketArn: { Type: String }
+  MediajointS3BucketArn: { Type: String }
   CmsHostname: { Type: String }
   FeederHostname: { Type: String }
   IdHostname: { Type: String }
@@ -318,8 +321,12 @@ Resources:
           Environment:
             - Name: APP_NAME
               Value: cms
+            - Name: RAILS_ENV
+              Value: !Ref EnvironmentTypeLowercase
             - Name: APP_ENV
               Value: !Ref EnvironmentTypeAbbreviation
+            - Name: AWS_BUCKET
+              Value: !Select [5, !Split [":", !Ref MediajointS3BucketArn]]
             - Name: AWS_ACCOUNT_ID
               Value: !Ref AWS::AccountId
             - Name: AWS_REGION
@@ -417,8 +424,12 @@ Resources:
           Environment:
             - Name: APP_NAME
               Value: cms
+            - Name: RAILS_ENV
+              Value: !Ref EnvironmentTypeLowercase
             - Name: APP_ENV
               Value: !Ref EnvironmentTypeAbbreviation
+            - Name: AWS_BUCKET
+              Value: !Select [5, !Split [":", !Ref MediajointS3BucketArn]]
             - Name: AWS_ACCOUNT_ID
               Value: !Ref AWS::AccountId
             - Name: AWS_REGION
