Migrate some env vars for ID and Remix

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -263,6 +263,7 @@ Resources:
         SecretsStackName: !Ref SecretsStackName
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        EnvironmentTypeLowercase: !Ref EnvironmentTypeLowercase
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
         AmazonSesSmtpCredentialsGeneratorServiceToken: !Ref AmazonSesSmtpCredentialsGeneratorServiceToken
