--- a/stacks/apps/id.yml
+++ b/stacks/apps/id.yml
@@ -1,4 +1,5 @@
 # stacks/apps/id.yml
+# 100A
 AWSTemplateFormatVersion: "2010-09-09"
 
 Description: >-
@@ -19,6 +20,7 @@ Parameters:
   EcsClusterArn: { Type: String }
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
+  EnvironmentTypeLowercase: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
   VpcId: { Type: AWS::EC2::VPC::Id }
@@ -207,6 +209,8 @@ Resources:
           Environment:
             - Name: APP_NAME
               Value: id
+            - Name: RAILS_ENV
+              Value: !Ref EnvironmentTypeLowercase
             - Name: APP_ENV
               Value: !Ref EnvironmentTypeAbbreviation
             - Name: AWS_SECRETS_BASE
