--- a/stacks/apps/remix.yml
+++ b/stacks/apps/remix.yml
@@ -1,4 +1,5 @@
 # stacks/apps/remix.yml
+# 200A
 AWSTemplateFormatVersion: "2010-09-09"
 
 Description: >-
@@ -23,6 +24,7 @@ Parameters:
   EcsClusterArn: { Type: String }
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
+  EnvironmentTypeLowercase: { Type: String }
   RegionMode: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
@@ -274,6 +276,10 @@ Resources:
           Environment:
             - Name: APP_NAME
               Value: remix
+            - Name: RACK_ENV
+              Value: !Ref EnvironmentTypeLowercase
+            - Name: RAILS_ENV
+              Value: !Ref EnvironmentTypeLowercase
             - Name: APP_ENV
               Value: !Ref EnvironmentTypeAbbreviation
             - Name: AWS_SECRETS_BASE
