Move some env vars to Networks task def

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -322,6 +322,7 @@ Resources:
         SecretsStackName: !Ref SecretsStackName
         EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+        EnvironmentTypeLowercase: !Ref EnvironmentTypeLowercase
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
         VpcPrivateSubnet1Id: !Ref VpcPrivateSubnet1Id
