--- a/stacks/apps/networks.yml
+++ b/stacks/apps/networks.yml
@@ -1,4 +1,5 @@
 # stacks/apps/networks.yml
+# 200A
 AWSTemplateFormatVersion: "2010-09-09"
 
 Description: >-
@@ -28,6 +29,7 @@ Parameters:
   EcsClusterArn: { Type: String }
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
+  EnvironmentTypeLowercase: { Type: String }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
   VpcId: { Type: AWS::EC2::VPC::Id }
@@ -311,6 +313,8 @@ Resources:
           Environment:
             - Name: APP_NAME
               Value: networks
+            - Name: RAILS_ENV
+              Value: !Ref EnvironmentTypeLowercase
             - Name: APP_ENV
               Value: !Ref EnvironmentTypeAbbreviation
             - Name: AWS_SECRETS_BASE
@@ -681,6 +685,8 @@ Resources:
             #####
             - Name: APP_NAME
               Value: networks
+            - Name: RAILS_ENV
+              Value: !Ref EnvironmentTypeLowercase
             - Name: APP_ENV
               Value: !Ref EnvironmentTypeAbbreviation
             - Name: AWS_SECRETS_BASE
