Remove Networks envar

--- a/stacks/apps/networks.yml
+++ b/stacks/apps/networks.yml
@@ -313,8 +313,8 @@ Resources:
           Environment:
             - Name: APP_NAME
               Value: networks
-            - Name: RAILS_ENV
-              Value: !Ref EnvironmentTypeLowercase
+            # TODO - Name: RAILS_ENV
+            #   Value: !Ref EnvironmentTypeLowercase
             - Name: APP_ENV
               Value: !Ref EnvironmentTypeAbbreviation
             - Name: AWS_SECRETS_BASE
@@ -685,8 +685,8 @@ Resources:
             #####
             - Name: APP_NAME
               Value: networks
-            - Name: RAILS_ENV
-              Value: !Ref EnvironmentTypeLowercase
+            # TODO - Name: RAILS_ENV
+            #   Value: !Ref EnvironmentTypeLowercase
             - Name: APP_ENV
               Value: !Ref EnvironmentTypeAbbreviation
             - Name: AWS_SECRETS_BASE
