Turn off Networks services temporarily

--- a/stacks/apps/networks.yml
+++ b/stacks/apps/networks.yml
@@ -228,7 +228,7 @@ Resources:
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
-      DesiredCount: 2
+      DesiredCount: 0 # 2
       EnableECSManagedTags: true
       LoadBalancers:
         - ContainerName: !Ref kWebContainerName
@@ -583,7 +583,7 @@ Resources:
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
-      DesiredCount: 1
+      DesiredCount: 0 # 1
       EnableECSManagedTags: true
       LoadBalancers:
         - ContainerName: !Ref kSphinxContainerName
