Turn Networks back on

--- a/stacks/apps/networks.yml
+++ b/stacks/apps/networks.yml
@@ -228,7 +228,7 @@ Resources:
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
-      DesiredCount: 0 # 2
+      DesiredCount: 2
       EnableECSManagedTags: true
       LoadBalancers:
         - ContainerName: !Ref kWebContainerName
@@ -313,8 +313,8 @@ Resources:
           Environment:
             - Name: APP_NAME
               Value: networks
-            # TODO - Name: RAILS_ENV
-            #   Value: !Ref EnvironmentTypeLowercase
+            - Name: RAILS_ENV
+              Value: !Ref EnvironmentTypeLowercase
             - Name: APP_ENV
               Value: !Ref EnvironmentTypeAbbreviation
             - Name: AWS_SECRETS_BASE
@@ -583,7 +583,7 @@ Resources:
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 50
-      DesiredCount: 0 # 1
+      DesiredCount: 1
       EnableECSManagedTags: true
       LoadBalancers:
         - ContainerName: !Ref kSphinxContainerName
@@ -685,8 +685,8 @@ Resources:
             #####
             - Name: APP_NAME
               Value: networks
-            # TODO - Name: RAILS_ENV
-            #   Value: !Ref EnvironmentTypeLowercase
+            - Name: RAILS_ENV
+              Value: !Ref EnvironmentTypeLowercase
             - Name: APP_ENV
               Value: !Ref EnvironmentTypeAbbreviation
             - Name: AWS_SECRETS_BASE
