--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -39,6 +39,8 @@ Parameters:
   EcsClusterName: { Type: String }
   SharedEcsAsgInstanceSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   LoadBalancerSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
+  SharedMysqlClientSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
+  SharedPostgresqlClientSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   EcsLaunchEndpointsAccessSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   KmsEndpointAccessSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   SharedRedisReplicationGroupEndpointAddress: { Type: String }
@@ -144,6 +146,8 @@ Resources:
               - !Ref SharedEcsAsgInstanceSecurityGroupId
               - !Ref EcsLaunchEndpointsAccessSecurityGroupId
               - !Ref KmsEndpointAccessSecurityGroupId
+              - !Ref SharedMysqlClientSecurityGroupId
+              - !Ref SharedPostgresqlClientSecurityGroupId
             Ipv6AddressCount: 1
         UserData:
           # User data runs commands on EC2 instances when they are launched. To
