--- a/stacks/apps/networks.yml
+++ b/stacks/apps/networks.yml
@@ -52,6 +52,7 @@ Parameters:
   CloudWatchLogGroupTaggerServiceToken: { Type: String }
   EcsLaunchEndpointsAccessSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   KmsEndpointAccessSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
+  SharedMysqlClientSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   SharedAuroraMysqlEndpoint: { Type: String }
   SharedAuroraMysqlPort: { Type: String }
   PorterJobExecutionSnsTopicArn: { Type: String }
@@ -598,6 +599,7 @@ Resources:
             - !GetAtt SphinxServerSecurityGroup.GroupId
             - !Ref EcsLaunchEndpointsAccessSecurityGroupId
             - !Ref KmsEndpointAccessSecurityGroupId
+            - !Ref SharedMysqlClientSecurityGroupId
           AssignPublicIp: DISABLED
           Subnets:
             - !Ref VpcPrivateSubnet1Id
