--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -41,6 +41,7 @@ Parameters:
   LoadBalancerSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   SharedMysqlClientSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   SharedPostgresqlClientSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
+  SharedRedisClientSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   EcsLaunchEndpointsAccessSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   KmsEndpointAccessSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   SharedRedisReplicationGroupEndpointAddress: { Type: String }
@@ -148,6 +149,7 @@ Resources:
               - !Ref KmsEndpointAccessSecurityGroupId
               - !Ref SharedMysqlClientSecurityGroupId
               - !Ref SharedPostgresqlClientSecurityGroupId
+              - !Ref SharedRedisClientSecurityGroupId
             Ipv6AddressCount: 1
         UserData:
           # User data runs commands on EC2 instances when they are launched. To
