--- a/stacks/apps/dovetail-analytics.yml
+++ b/stacks/apps/dovetail-analytics.yml
@@ -1,4 +1,5 @@
 # stacks/apps/dovetail-analytics.yml
+# 300A
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
 
@@ -25,7 +26,7 @@ Parameters:
   VpcPrivateSubnet2Id: { Type: AWS::EC2::Subnet::Id }
   VpcPrivateSubnet3Id: { Type: AWS::EC2::Subnet::Id }
   MetricsKinesisStreamArn: { Type: AWS::SSM::Parameter::Value<String> }
-  SharedRedisSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
+  SharedRedisClientSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   SharedRedisReplicationGroupEndpointAddress: { Type: String }
   SharedRedisReplicationGroupEndpointPort: { Type: String }
   DynamoDbKinesisStreamArn: { Type: AWS::SSM::Parameter::Value<String> }
@@ -896,16 +897,6 @@ Resources:
           MetricValue: "1"
 
   # Redis
-  RedisSecurityGroupFunctionIngress:
-    Type: AWS::EC2::SecurityGroupIngress
-    Properties:
-      Description: Allow Redis traffic from the Counts SG
-      SourceSecurityGroupId: !GetAtt AnalyticsRedisFunctionSecurityGroup.GroupId
-      FromPort: 6379
-      GroupId: !Ref SharedRedisSecurityGroupId
-      IpProtocol: tcp
-      ToPort: 6379
-
   AnalyticsRedisFunctionSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
@@ -969,6 +960,7 @@ Resources:
       VpcConfig:
         SecurityGroupIds:
           - !GetAtt AnalyticsRedisFunctionSecurityGroup.GroupId
+          - !Ref SharedRedisClientSecurityGroupId
         SubnetIds:
           - !Ref VpcPrivateSubnet1Id
           - !Ref VpcPrivateSubnet2Id
