--- a/stacks/apps/dovetail-counts.yml
+++ b/stacks/apps/dovetail-counts.yml
@@ -1,4 +1,5 @@
 # stacks/apps/dovetail-counts.yml
+# 100A
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
 
@@ -36,7 +37,7 @@ Parameters:
   DovetailCountedBytesKinesisArn: { Type: AWS::SSM::Parameter::Value<String> }
   SharedRedisReplicationGroupEndpointAddress: { Type: String }
   SharedRedisReplicationGroupEndpointPort: { Type: String }
-  SharedRedisSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
+  SharedRedisClientSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
@@ -64,16 +65,6 @@ Resources:
         - { Key: prx:dev:family, Value: Dovetail }
         - { Key: prx:dev:application, Value: Counts }
       VpcId: !Ref VpcId
-
-  RedisSecurityGroupFunctionIngress:
-    Type: AWS::EC2::SecurityGroupIngress
-    Properties:
-      Description: Allow Redis traffic from the Counts SG
-      SourceSecurityGroupId: !GetAtt CountsFunctionSecurityGroup.GroupId
-      FromPort: 6379
-      GroupId: !Ref SharedRedisSecurityGroupId
-      IpProtocol: tcp
-      ToPort: 6379
 
   CountsFunction:
     Type: AWS::Serverless::Function
@@ -142,6 +133,7 @@ Resources:
           - !GetAtt CountsFunctionSecurityGroup.GroupId
           - !Ref KinesisStreamsEndpointAccessSecurityGroupId
           - !Ref StsEndpointAccessSecurityGroupId
+          - !Ref SharedRedisClientSecurityGroupId
         SubnetIds:
           - !Ref VpcPrivateSubnet1Id
           - !Ref VpcPrivateSubnet2Id
