Add Exchange requests to dashboard

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -454,6 +454,9 @@ Outputs:
   CastlePostgresInstanceEndpointPort:
     Value: !GetAtt CastleStack.Outputs.PostgresInstanceEndpointPort
 
+  ExchangeWebTargetGroupFullName:
+    Value: !GetAtt ExchangeStack.Outputs.WebTargetGroupFullName
+
   FeederWebTargetGroupFullName:
     Value: !GetAtt FeederStack.Outputs.WebTargetGroupFullName
 
