--- a/stacks/apps/exchange.yml
+++ b/stacks/apps/exchange.yml
@@ -1,4 +1,5 @@
 # stacks/apps/exchange.yml
+# 200A
 #
 # The names of the SQS queues created by this template are intended to
 # implicitly match some configuration that exists within the CMS application.
@@ -1208,3 +1209,7 @@ Resources:
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Exchange }
       VisibilityTimeout: 5400 # 1.5 hour
+
+Outputs:
+  WebTargetGroupFullName:
+    Value: !GetAtt WebTargetGroup.TargetGroupFullName
