--- a/stacks/dashboards.yml
+++ b/stacks/dashboards.yml
@@ -48,6 +48,8 @@ Parameters:
   DovetailVanityAlbDomain: { Type: String }
   DovetailTargetGroupFullName: { Type: String }
 
+  ExchangeWebTargetGroupFullName: { Type: String }
+
   FeederWebTargetGroupFullName: { Type: String }
 
   IdTargetGroupFullName: { Type: String }
@@ -129,6 +131,7 @@ Resources:
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${CastleTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Castle" } ],
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${CmsTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "CMS" } ],
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${DovetailTargetGroupFullName}", "LoadBalancer", "${DovetailAlbFullName}", { "label": "Dovetail-Router" } ],
+                          [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${ExchangeWebTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Exchange" } ],
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${FeederWebTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Feeder" } ],
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${IdTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "ID" } ],
                           [ "AWS/ApplicationELB", "RequestCount", "TargetGroup", "${IframelyTargetGroupFullName}", "LoadBalancer", "${SharedAlbFullName}", { "label": "Iframely" } ],
