--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -916,6 +916,8 @@ Resources:
         DovetailVanityAlbDomain: !GetAtt Apps300AStack.Outputs.DovetailVanityAlbDomain
         DovetailTargetGroupFullName: !GetAtt Apps300AStack.Outputs.DovetailTargetGroupFullName
 
+        ExchangeWebTargetGroupFullName: !GetAtt Apps200AStack.Outputs.ExchangeWebTargetGroupFullName
+
         FeederWebTargetGroupFullName: !GetAtt Apps200AStack.Outputs.FeederWebTargetGroupFullName
 
         IdTargetGroupFullName: !GetAtt Apps100AStack.Outputs.IdTargetGroupFullName
