Actual security groups

--- a/stacks/jump-server.yml
+++ b/stacks/jump-server.yml
@@ -15,7 +15,9 @@ Parameters:
   KeyPairName: { Type: AWS::EC2::KeyPair::KeyName }
   RootStackName: { Type: String }
   RootStackId: { Type: String }
-  SharedEcsAsgInstanceSecurityGroupId: { Type: String }
+  SharedMysqlClientSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
+  SharedPostgresqlClientSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
+  SharedRedisClientSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   VpcPublicSubnet1Id: { Type: AWS::EC2::Subnet::Id }
 
 Conditions:
@@ -102,8 +104,9 @@ Resources:
           DeleteOnTermination: true
           DeviceIndex: 0
           GroupSet:
-            - !Ref SharedEcsAsgInstanceSecurityGroupId
-            # TODO: the actual security groups
+            - !Ref SharedMysqlClientSecurityGroupId
+            - !Ref SharedPostgresqlClientSecurityGroupId
+            - !Ref SharedRedisClientSecurityGroupId
           Ipv6AddressCount: 1
           SubnetId: !Ref VpcPublicSubnet1Id
       Tags:
